--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+/* ------ VARIABLES ------- */
+
+:root {
+  --Tomato: hsl(4, 100%, 67%);
+
+  --Dark-Slate-Grey: hsl(234, 29%, 20%);
+  --Charcoal-Grey: hsl(235, 18%, 26%);
+  --Grey: hsl(231, 7%, 60%);
+  --White: hsl(0, 0%, 100%);
+}
+
 @font-face {
   font-family: "Roboto";
   src: url(../assets/fonts/Roboto-Regular.ttf);
@@ -23,6 +34,112 @@ textarea {
   font: inherit;
 }
 
+ul,
+li {
+  list-style-type: none;
+}
+
 body {
   font-family: "Roboto";
+  margin-block-end: 3rem;
+}
+
+.card__image img {
+  border-radius: 0 0 20px 20px;
+}
+
+.card__content {
+  margin-block-start: 1rem;
+  padding-inline: 1rem;
+}
+
+.card__content h1 {
+  color: var(--Dark-Slate-Grey);
+}
+
+.card-text {
+  margin-block: 1rem;
+}
+
+.card-list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.card-list .list-items {
+  display: flex;
+  align-items: flex-start;
+  gap: 8px;
+}
+
+form {
+  margin-block-start: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+form label {
+  margin-block-end: 10px;
+}
+
+form input {
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid var(--Grey);
+  outline: 0;
+}
+
+form small {
+  font-size: 16px;
+  color: var(--Tomato);
+  margin-block-start: 5px;
+  margin-block-end: 10px;
+}
+
+form button {
+  border: 0;
+  color: var(--White);
+  background-color: var(--Dark-Slate-Grey);
+  padding: 10px 0;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: all 300ms ease-in-out;
+}
+
+form button:hover {
+  background-color: var(--Tomato);
+}
+
+/* ----- MEDIA QEUERY ----- */
+@media (min-width: 600px) {
+  body {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--Charcoal-Grey);
+    padding-inline: 1rem;
+  }
+  .card {
+    background-color: var(--White);
+    max-width: 600px;
+    padding: 1.5rem;
+    border-radius: 1.3rem;
+  }
+
+  .card-flex {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 2rem;
+  }
+
+  .card__image img {
+    border-radius: 0;
+  }
+
+  .card__content {
+    margin-block-start: 0;
+    padding-inline: 0;
+  }
 }
