--- a/css/sucess.css
+++ b/css/sucess.css
@@ -69,6 +69,13 @@ body {
   transition: all 300ms ease-in-out;
 }
 
+.sucess button a {
+  text-decoration: none;
+  color: var(--White);
+  font-size: 16px;
+  font: inherit;
+}
+
 .sucess button:hover {
   background-color: var(--Tomato);
 }
