--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 @font-face {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   src: url(../assets/fonts/Roboto-Regular.ttf);
 }
 
@@ -40,7 +40,7 @@ li {
 }
 
 body {
-  font-family: "Roboto";
+  font-family: 'Roboto', sans-serif;
   margin-block-end: 3rem;
 }
 
