--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,6 @@ li {
 body {
   font-family: 'Roboto', sans-serif;
   margin-block-end: 3rem;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .card__image img {
@@ -119,6 +115,49 @@ body {
   display: none;
 }
 
+.sucess {
+  margin-inline: 20px;
+}
+
+.sucess__img {
+  margin-block-start: 18vh;
+}
+
+.sucess__content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+}
+
+.sucess__content h1 {
+  margin-block-start: 30px;
+  color: var(--Dark-Slate-Grey);
+}
+
+.sucess__content p {
+  color: var(--Charcoal-Grey);
+  font-size: 15px;
+}
+.sucess__content p .user-email {
+  font-weight: bold;
+}
+
+.sucess__content button {
+  margin-block-start: 20vh;
+  background-color: var(--Charcoal-Grey);
+  color: var(--White);
+  border: 0;
+  padding-block: 0.7rem;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 300ms;
+}
+
+.sucess__content button:hover {
+  background-color: var(--Tomato);
+  color: var(--White);
+}
+
 /* ----- MEDIA QEUERY ----- */
 @media (min-width: 600px) {
   body {
@@ -159,39 +198,15 @@ body {
   }
 
   .sucess__img {
+    margin-block-start: 0;
     margin-block-end: 1rem;
   }
 
-  .sucess__content {
-    display: flex;
-    flex-direction: column;
-    gap: 1.3rem;
-  }
-
   .sucess__content h1 {
-    color: var(--Dark-Slate-Grey);
-  }
-
-  .sucess__content p {
-    color: var(--Charcoal-Grey);
-    font-size: 13px;
-  }
-  .sucess__content p .user-email {
-    font-weight: bold;
+    margin: 0;
   }
 
   .sucess__content button {
-    background-color: var(--Charcoal-Grey);
-    color: var(--White);
-    border: 0;
-    padding-block: 0.7rem;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: 300ms;
-  }
-
-  .sucess__content button:hover {
-    background-color: var(--Tomato);
-    color: var(--White);
+    margin: 0;
   }
 }
